tests/rt/pos/ifc/endorseType.trp
let val x = if true raisedTo `{alice}`
            then 42
            else 21
    val _ = blockdown authority
    val x' = endorseType (x, authority, `<alice; #root-integrity>`)
in (x, x')
end

